--- a/public/request.html
+++ b/public/request.html
@@ -117,11 +117,7 @@
         
         <div class="card mb-4">
           <div class="card-header bg-primary text-white">
-            <h5 class="mb-0" data-i18n="request.payment"> ---------- </h5>
-
-
-
-            <h5 class="mb-0" data-i18n="request.payment">ช่องทางการชำระเงิน------------</h5>
+            <h5 class="mb-0" data-i18n="request.payment">ช่องทางการชำระเงิน</h5>
           </div>
           <div class="card-body">
             <div class="mb-3">
