--- a/public/request-detail.html
+++ b/public/request-detail.html
@@ -149,6 +149,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/language.js"></script>
   <script src="js/main.js"></script>
-  <script src="js/request-detail.js"></script>
+  <script src="js/student-request-detail.js"></script>
 </body>
 </html>
