--- a/public/login.html
+++ b/public/login.html
@@ -53,7 +53,8 @@
               </div>
             </form>
             <div class="mt-3 text-center">
-              <p data-i18n="login.noAccount">ยังไม่มีบัญชี? <a href="register.html" data-i18n="login.register">ลงทะเบียน</a></p>
+              <p data-i18n="login.noAccount">ยังไม่มีบัญชี? <a href="register.html">ลงทะเบียน</a></p>
+         <!--      <p data-i18n="login.noAccount">ยังไม่มีบัญชี? <a href="register.html" data-i18n="login.register">ลงทะเบียน</a></p>  -->
             </div>
           </div>
         </div>
