--- a/public/admin/requests.html
+++ b/public/admin/requests.html
@@ -148,6 +148,6 @@
   <script src="../js/language.js"></script>
   <script src="../js/main.js"></script>
   <script src="../js/admin.js"></script>
-  <script src="../js/requests.js"></script>
+  <script src="../js/admin-requests.js"></script>
 </body>
 </html>
