--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -22,7 +22,7 @@
             <a class="nav-link" href="../index.html" data-i18n="navbar.home">หน้าหลัก</a>
           </li>  -->
           <li class="nav-item">
-            <a class="nav-link active" href="dashboard.html" data-i18n="navbar.adminPanel">จัดการระบบ</a>
+            <a class="nav-link active" href="dashboard.html" data-i18n="navbar.adminPanel">หน้าหลัก</a>
           </li>
         </ul>
         <div class="language-selector d-flex me-3">
