--- a/public/admin/reports.html
+++ b/public/admin/reports.html
@@ -19,11 +19,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto">
-          <li class="nav-item">
+       <!--   <li class="nav-item">
             <a class="nav-link" href="../index.html" data-i18n="navbar.home">หน้าหลัก</a>
-          </li>
+          </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="dashboard.html" data-i18n="navbar.adminPanel">จัดการระบบ</a>
+            <a class="nav-link" href="dashboard.html" data-i18n="navbar.adminPanel">หน้าหลัก</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="requests.html" data-i18n="admin.dashboard.requestManagement">จัดการคำขอเอกสาร</a>
