--- a/public/admin/users.html
+++ b/public/admin/users.html
@@ -18,9 +18,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto">
-          <li class="nav-item">
+<!--          <li class="nav-item">
             <a class="nav-link" href="../index.html" data-i18n="navbar.home">หน้าหลัก</a>
-          </li>
+          </li>  -->
           <li class="nav-item">
             <a class="nav-link" href="dashboard.html" data-i18n="navbar.adminPanel">จัดการระบบ</a>
           </li>
