--- a/public/admin/reports.html
+++ b/public/admin/reports.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/responsive.css">
+  <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -166,11 +167,21 @@
     </div>
   </footer>
 
+<!-- ส่วน Scripts ด้านล่างสุดของหน้า -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<!-- ไลบรารีสำหรับ PDF -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
 <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+
+<!-- เพิ่มฟอนต์ไทยสำหรับ PDF -->
+<script src="https://cdn.jsdelivr.net/npm/thsarabunnew-font@1.0.0/thsarabunnew-font.js"></script>
+
+<!-- ไลบรารีสำหรับ Excel -->
+<script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+
 <script src="../js/language.js"></script>
 <script src="../js/main.js"></script>
 <script src="../js/admin-common.js"></script>
