--- a/public/admin/reports.html
+++ b/public/admin/reports.html
@@ -51,16 +51,16 @@
   </nav>
 
   <div class="container mt-5">
-    <div class="d-flex justify-content-between align-items-center mb-4">
+  <!--  <div class="d-flex justify-content-between align-items-center mb-4">
       <h2 data-i18n="admin.reports.header">รายงาน</h2>
-<!--      <div>
+      <div>
         <button class="btn btn-outline-primary me-2" id="print-report">
           <i class="bi bi-printer"></i> <span data-i18n="admin.reports.print">พิมพ์</span>
         </button>
         <button class="btn btn-outline-primary" id="download-report">
           <i class="bi bi-download"></i> <span data-i18n="admin.reports.downloadReport">ดาวน์โหลดรายงาน</span>
         </button>
-      </div> -->
+      </div>
       <div>
   <div class="dropdown d-inline-block me-2">
     <button class="btn btn-outline-primary dropdown-toggle" type="button" id="downloadReportDropdown" data-bs-toggle="dropdown" aria-expanded="false">
@@ -74,8 +74,26 @@
   <button class="btn btn-outline-primary" id="print-report">
     <i class="bi bi-printer"></i> <span data-i18n="admin.reports.print">พิมพ์</span>
   </button>
-</div>
+</div> 
+    </div>   -->
+<div class="d-flex justify-content-between align-items-center mb-4">
+  <h2 data-i18n="admin.reports.header">รายงาน</h2>
+  <div>
+    <div class="dropdown d-inline-block me-2">
+      <button class="btn btn-outline-primary dropdown-toggle" type="button" id="downloadReportDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+        <i class="bi bi-download"></i> <span data-i18n="admin.reports.downloadReport">ดาวน์โหลดรายงาน</span>
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="downloadReportDropdown">
+        <li><a class="dropdown-item" href="#" id="download-pdf"><i class="bi bi-file-pdf"></i> ดาวน์โหลด PDF</a></li>
+        <li><a class="dropdown-item" href="#" id="download-excel"><i class="bi bi-file-excel"></i> ดาวน์โหลด Excel</a></li>
+      </ul>
     </div>
+    <button class="btn btn-outline-primary" id="print-report">
+      <i class="bi bi-printer"></i> <span data-i18n="admin.reports.print">พิมพ์</span>
+    </button>
+  </div>
+</div>
+    
     
     <div class="card mb-4">
       <div class="card-header bg-primary text-white">
