--- a/public/admin/reports.html
+++ b/public/admin/reports.html
@@ -4,11 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title data-i18n="admin.reports.title">รายงาน - ระบบขอเอกสารออนไลน์</title>
+
+   <!-- เพิ่มฟอนต์ Prompt สำหรับภาษาไทย, อังกฤษ -->
+  <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  
+  <!-- เพิ่มฟอนต์ Noto Sans SC สำหรับภาษาจีน -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
+  
+  <!-- ไฟล์ฟอนต์ทางเลือกสำหรับ PDF -->
+  <script src="https://cdn.jsdelivr.net/npm/@opendoc/fonts@latest/dist/prompt/prompt.min.js"></script>
+  
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/responsive.css">
   <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@400;700&display=swap" rel="stylesheet">
+
+
+  
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
