--- a/public/admin/reports.html
+++ b/public/admin/reports.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title data-i18n="admin.reports.title">รายงาน - ระบบขอเอกสารออนไลน์</title>
-
-   <!-- เพิ่มฟอนต์ Prompt สำหรับภาษาไทย, อังกฤษ -->
+  <!-- เพิ่มฟอนต์ Prompt สำหรับภาษาไทยและอังกฤษ -->
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- เพิ่มฟอนต์ Noto Sans SC สำหรับภาษาจีน -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
+  
+
   
   <!-- ไฟล์ฟอนต์ทางเลือกสำหรับ PDF -->
   <script src="https://cdn.jsdelivr.net/npm/@opendoc/fonts@latest/dist/prompt/prompt.min.js"></script>
