--- a/public/request.html
+++ b/public/request.html
@@ -185,6 +185,7 @@
           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
+          <div id="modal-alert-container"></div>
           <form id="add-document-form">
             <div class="mb-3">
               <label for="modal-document-type" class="form-label required" data-i18n="request.documentType">ประเภทเอกสาร</label>
