--- a/public/request.html
+++ b/public/request.html
@@ -7,7 +7,7 @@
   <!-- เพิ่มฟอนต์ Prompt สำหรับภาษาไทยและอังกฤษ -->
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
-  <!-- เพิ่มฟอนต์ Noto Sans SC สำหรับภาษาจีน -->
+  <!-- เพิ่มฟอนต์ Noto Sans SC สำหรับภาษาจีน -->[
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
   
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
@@ -101,12 +101,12 @@
                 <textarea class="form-control" id="address" rows="3" data-i18n-placeholder="request.addressPlaceholder"></textarea>
               </div>
               
-              <div id="urgent-container" class="mb-3">
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="urgent">
-                  <label class="form-check-label" for="urgent" data-i18n="request.urgent">บริการเร่งด่วน (เพิ่ม 50 บาท)</label>
-                </div>
-              </div>
+           <div id="urgent-container" class="mb-3">
+  <div class="form-check">
+    <input class="form-check-input" type="checkbox" id="urgent">
+    <label class="form-check-label" for="urgent" data-i18n="request.urgent">บริการเร่งด่วน (เพิ่ม 50 บาทต่อฉบับ)</label>
+  </div>
+</div>
               
               <div class="mb-3">
                 <label for="payment_slip" class="form-label required" data-i18n="request.paymentSlip">หลักฐานการชำระเงิน</label>
