--- a/public/request.html
+++ b/public/request.html
@@ -262,7 +262,7 @@
    <footer class="footer mt-5 py-3 bg-light">
     <div class="container text-center">
       <span class="text-muted" data-i18n="footer.copyright">
-        © 2025 ระบบขอเอกสารออนไลน์สำหรับนักศึกษามหาวิทยาลัยนอร์ทกรุงเทพ
+        © 2025 ระบบขอเอกสารออนไลน์สำหรับนักศึกษา มหาวิทยาลัยนอร์ทกรุงเทพ xxx
       </span>
     </div>
   </footer>
