--- a/public/admin/request-detail.html
+++ b/public/admin/request-detail.html
@@ -90,12 +90,18 @@
               <p><strong data-i18n="requestDetail.shippingAddress">ที่อยู่จัดส่ง:</strong></p>
               <p id="detail-address"></p>
             </div>
+            <!-- เพิ่มส่วนพิมพ์ใบรับคำขอ -->
+            <div id="print-receipt-container" class="mt-3 text-end" style="display: none;">
+              <button type="button" class="btn btn-outline-primary" onclick="printReceipt()">
+                <i class="bi bi-printer"></i> พิมพ์ใบรับคำขอ
+              </button>
+            </div>
           </div>
         </div>
         
         <div class="card mb-4">
           <div class="card-header bg-primary text-white">
-            <h5 class="mb-0">ข้อมูลนักศึกษา</h5>
+            <h5 class="mb-0" data-i18n="admin.requests.studentInfo">ข้อมูลนักศึกษา</h5>
           </div>
           <div class="card-body">
             <div class="row">
@@ -147,29 +153,29 @@
               </div>
               <div class="mb-3">
                 <label for="status-note" class="form-label" data-i18n="admin.requests.statusNote">หมายเหตุ (ถ้ามี)</label>
-                <textarea class="form-control" id="status-note" rows="3"></textarea>
-              </div>
-              <div class="d-grid">
-                <button type="button" class="btn btn-primary" id="update-status-button" data-i18n="admin.requests.updateButton">อัปเดตสถานะ</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+               <textarea class="form-control" id="status-note" rows="3"></textarea>
+             </div>
+             <div class="d-grid">
+               <button type="button" class="btn btn-primary" id="update-status-button" data-i18n="admin.requests.updateButton">อัปเดตสถานะ</button>
+             </div>
+           </form>
+         </div>
+       </div>
+     </div>
+   </div>
+ </div>
 
-  <footer class="footer mt-5 py-3 bg-light">
-    <div class="container text-center">
-      <span class="text-muted" data-i18n="footer.copyright">
-        © 2025 ระบบขอเอกสารออนไลน์สำหรับนักศึกษามหาวิทยาลัยนอร์ทกรุงเทพ
-      </span>
-    </div>
-  </footer>
+ <footer class="footer mt-5 py-3 bg-light">
+   <div class="container text-center">
+     <span class="text-muted" data-i18n="footer.copyright">
+       © 2025 ระบบขอเอกสารออนไลน์สำหรับนักศึกษามหาวิทยาลัยนอร์ทกรุงเทพ
+     </span>
+   </div>
+ </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../js/language.js"></script>
-  <script src="../js/main.js"></script>
-  <script src="../js/request-detail.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+ <script src="../js/language.js"></script>
+ <script src="../js/main.js"></script>
+ <script src="../js/request-detail.js"></script>
 </body>
 </html>
