--- a/public/admin/request-detail.html
+++ b/public/admin/request-detail.html
@@ -77,11 +77,15 @@
           <div class="card-body">
             <div class="row">
               <div class="col-lg-6">
-                 <p><strong data-i18n="requestDetail.studentName">ชื่อนักศึกษา:</strong> <span id="detail-student-name"></span></p>
+                <p><strong data-i18n="requestDetail.requestID">รหัสคำขอ:</strong> <span id="detail-id"></span></p>
                 <p><strong data-i18n="requestDetail.studentID">รหัสนักศึกษา:</strong> <span id="detail-student-id"></span></p>
+                <p><strong data-i18n="requestDetail.studentName">ชื่อนักศึกษา:</strong> <span id="detail-student-name"></span></p>
+                 </div>
+                 <div class="col-lg-6">
+                <p><strong data-i18n="requestDetail.faculty">คณะ:</strong> <span id="detail-student-faculty"></span></p>
                 <p><strong data-i18n="requestDetail.email">อีเมล:</strong> <span id="detail-student-email"></span></p>
                 <p><strong data-i18n="requestDetail.phone">เบอร์โทรศัพท์:</strong> <span id="detail-student-phone"></span></p>
-                <p><strong data-i18n="requestDetail.faculty">คณะ:</strong> <span id="detail-student-faculty"></span></p>
+                 </div>
                 <p><strong data-i18n="requestDetail.requestID">รหัสคำขอ:</strong> <span id="detail-id"></span></p>
                 <p><strong data-i18n="requestDetail.documentType">ประเภทเอกสาร:</strong> <span id="detail-document-name"></span></p>
                 <p><strong data-i18n="requestDetail.deliveryMethod">วิธีการรับเอกสาร:</strong> <span id="detail-delivery-method"></span></p>
