--- a/public/admin/request-detail.html
+++ b/public/admin/request-detail.html
@@ -102,6 +102,7 @@
             </div>
           </div>
         </div>
+        </div>
         
         <!-- เพิ่มปุ่มอัปเดตสถานะและแสดงฟอร์ม -->
         <div class="card mb-4">
