--- a/public/admin/request-detail.html
+++ b/public/admin/request-detail.html
@@ -98,7 +98,7 @@
             <div id="detail-address-container" style="display: none;">
               <hr>
               <p><strong data-i18n="requestDetail.shippingAddress">ที่อยู่จัดส่ง:</strong></p>
-              <p><strong data-i18n="requestDetail.studentName">ชื่อนักศึกษา:</strong> <span id="detail-student-name-address"></span></p>
+              <p id="detail-student-name-address"></p>
               <p id="detail-address"></p>
             </div>
           </div>
