--- a/public/status.html
+++ b/public/status.html
@@ -119,7 +119,7 @@
             </div>
             <div class="card-body">
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-auto">
                   <p><strong data-i18n="requestDetail.requestID">รหัสคำขอ:</strong> <span id="detail-id"></span></p>
                   <p><strong data-i18n="requestDetail.documentType">ประเภทเอกสาร:</strong> <span id="detail-document-name"></span></p>
                   <p><strong data-i18n="requestDetail.deliveryMethod">วิธีการรับเอกสาร:</strong> <span id="detail-delivery-method"></span></p>
