--- a/public/request.html
+++ b/public/request.html
@@ -7,7 +7,7 @@
   <!-- เพิ่มฟอนต์ Prompt สำหรับภาษาไทยและอังกฤษ -->
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
-  <!-- เพิ่มฟอนต์ Noto Sans SC สำหรับภาษาจีน -->[
+  <!-- เพิ่มฟอนต์ Noto Sans SC สำหรับภาษาจีน -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
   
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
