--- a/public/request.html
+++ b/public/request.html
@@ -302,9 +302,8 @@
 </script>
    <footer class="footer mt-5 py-3 bg-light">
     <div class="container text-center">
-      <p>test</p>
-      <span class="text-muted" data-i18n="footer.copyright">
-        © 2025 ระบบขอเอกสารออนไลน์สำหรับนักศึกษา มหาวิทยาลัยนอร์ทกรุงเทพ xxx
+          <span class="text-muted" data-i18n="footer.copyright">
+        © 2025 ระบบขอเอกสารออนไลน์สำหรับนักศึกษา มหาวิทยาลัยนอร์ทกรุงเทพ
       </span>
     </div>
   </footer>
