--- a/public/admin/request-detail.html
+++ b/public/admin/request-detail.html
@@ -69,7 +69,7 @@
     <div id="alert-container"></div>
     
     <div class="row">
-      <div class="col-md-8">
+      <div class="col-12">
         <div class="card mb-4">
           <div class="card-header bg-primary text-white">
             <h5 class="mb-0" data-i18n="requestDetail.requestInfo">ข้อมูลคำขอ</h5>
