--- a/public/admin/request-detail.html
+++ b/public/admin/request-detail.html
@@ -88,7 +88,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-12">
+              <div class="col-md-6">
                 <p><strong data-i18n="requestDetail.documentType">ประเภทเอกสาร:</strong> <span id="detail-document-name"></span></p>
                 <p><strong data-i18n="requestDetail.deliveryMethod">วิธีการรับเอกสาร:</strong> <span id="detail-delivery-method"></span></p>
                 <p><strong data-i18n="requestDetail.requestDate">วันที่ขอ:</strong> <span id="detail-created-at"></span></p>
