--- a/public/admin/request-detail.html
+++ b/public/admin/request-detail.html
@@ -153,6 +153,14 @@
       </div>
     </div>
 
+ <div class="row">
+      <div class="col-12">
+        <div class="card">
+<p> ddfdfdfd</p>
+     </div>
+      </div>
+    </div>
+    
     <!-- ย้ายประวัติสถานะมาไว้ด้านล่าง -->
     <div class="row">
       <div class="col-12">
