--- a/public/status.html
+++ b/public/status.html
@@ -39,6 +39,7 @@
           </li>
         </ul>
         <div class="language-selector d-flex me-3">
+          <button class="btn btn-sm btn-outline-light me-2" data-lang="th">ไทย</button>
           <button class="btn btn-sm btn-outline-light me-2" data-lang="en">English</button>
           <button class="btn btn-sm btn-outline-light" data-lang="zh">中文</button>
         </div>
