--- a/public/request.html
+++ b/public/request.html
@@ -592,6 +592,7 @@
         
         try {
           const qrData = generateThaiQRPayment(billingId, ref1, ref2, totalPrice);
+          console.log('QR Data -qrData-:', qrData);
           console.log('QR Data generated:', qrData.substring(0, 50) + '...');
           
           // ใช้ QR Server API แทน library
