--- a/public/request.html
+++ b/public/request.html
@@ -516,7 +516,7 @@
       }
       
       // ดึงข้อมูล student ID จาก localStorage (key: userId) หรือใช้ค่าเริ่มต้น
-      const studentId = localStorage.getItem('userId') || '6401234567';
+      const studentId = localStorage.getItem('studentId') || '999999999';
       
       // คำนวณราคารวม
       let totalPrice = 0;
