--- a/public/request.html
+++ b/public/request.html
@@ -542,7 +542,7 @@
       
       if (totalPrice > 0) {
         // สร้าง QR Code สำหรับ Bill Payment
-        const billingId = '099400000518106';
+        const billingId = '|099400000518106';
         const ref1 = studentId; // ใช้ student ID เป็น ref1
         const ref2 = '777'; // ใช้ 777 เป็น ref2
         
