--- a/public/request.html
+++ b/public/request.html
@@ -337,7 +337,7 @@
             <div class="mb-3">
               <p data-i18n="request.bankTransfer">หรือโอนเงินผ่านบัญชีธนาคาร:</p>
               <p>
-                <strong data-i18n="request.bankName">ธนาคาร:</strong> <span id="bank-name" data-i18n="request.bankNameValue">ธนาคารกรุงไทย</span>
+                <strong data-i18n="request.bankName">ธนาคาร:</strong> <span id="bank-name" data-i18n="request.bankNameValue">ธนาคารไทยพาณิชย์</span>
                 <strong data-i18n="request.accountNumber">เลขที่บัญชี:</strong> <span id="account-number">1234567890</span><br>
                 <strong data-i18n="request.accountName">ชื่อบัญชี:</strong> <span id="account-name" data-i18n="request.accountNameValue">มหาวิทยาลัยนอร์ทกรุงเทพ</span>
               </p>
