--- a/public/request.html
+++ b/public/request.html
@@ -376,12 +376,12 @@
                 </div>
               </div>
               <p class="text-center mt-2" data-i18n="request.scanQR">สแกน QR Code เพื่อชำระเงิน</p>
-              <div class="qr-info">
+        <!--      <div class="qr-info">
                 <small class="text-muted">
                   <i class="bi bi-info-circle"></i> 
                   QR Code จะอัปเดตอัตโนมัติตามจำนวนเงินที่ต้องชำระ
                 </small>
-              </div>
+              </div>-->
             </div>
             <div class="mb-3">
               <p data-i18n="request.bankTransfer">หรือโอนเงินผ่านบัญชีธนาคาร:</p>
