--- a/public/request.html
+++ b/public/request.html
@@ -369,7 +369,7 @@
                 <canvas id="qr-canvas" style="display: none;"></canvas>
                 <div id="qr-placeholder" class="text-muted">
                   <i class="bi bi-qr-code" style="font-size: 3rem;"></i>
-                  <p class="mt-2">เลือกเอกสารเพื่อสร้าง QR Code</p>
+                  <p class="mt-2" data-i18n="request.selectDocumentForQR">เลือกเอกสารเพื่อสร้าง QR Code</p>
                 </div>
                 <div id="qr-amount-display" class="qr-amount-display" style="display: none;">
                   <span data-i18n="request.qrAmount">จำนวนเงิน</span>: <span id="qr-amount">0.00 บาท</span>
