--- a/public/request.html
+++ b/public/request.html
@@ -342,19 +342,19 @@
             <hr>
             <div class="d-flex justify-content-between">
               <strong data-i18n="request.documentSubtotal">ราคาเอกสารรวม:</strong>
-              <span id="documents-subtotal">0.00 บาท</span>
+              <span id="documents-subtotal"> - </span>
             </div>
             <div id="shipping-fee-container" class="d-flex justify-content-between mt-2" style="display: none;">
               <strong data-i18n="request.shippingFee">ค่าจัดส่ง:</strong>
-              <span id="shipping-fee">0.00 บาท</span>
+              <span id="shipping-fee"> - </span>
             </div>
             <div id="urgent-fee-container" class="d-flex justify-content-between mt-2" style="display: none;">
               <strong data-i18n="request.urgentService">บริการเร่งด่วน:</strong>
-              <span id="urgent-fee">0.00 บาท</span>
+              <span id="urgent-fee"> - </span>
             </div>
             <div class="d-flex justify-content-between mt-3 pt-2 border-top fw-bold">
               <strong data-i18n="request.totalPrice">ราคารวม:</strong>
-              <span id="total-price">0.00 บาท</span>
+              <span id="total-price"> - </span>
             </div>
           </div>
         </div>
