--- a/public/index.html
+++ b/public/index.html
@@ -128,15 +128,15 @@
               <tbody>
                 <tr>
                   <td data-i18n="fees.normalDocument">เอกสารแบบธรรมดา (รับเอง)</td>
-                  <td>100 บาท</td>
+                  <td>100 <span data-i18n="request.currency">บาท</span></td>
                 </tr>
                 <tr>
                   <td data-i18n="fees.urgentDocument">เอกสารแบบเร่งด่วน (รับเอง)</td>
-                  <td>150 บาท</td>
+                  <td>150 <span data-i18n="request.currency">บาท</span></td>
                 </tr>
                 <tr>
                   <td data-i18n="fees.postalService">ค่าจัดส่งทางไปรษณีย์</td>
-                  <td>200 บาท</td>
+                  <td>200 <span data-i18n="request.currency">บาท</span></td>
                 </tr>
               </tbody>
             </table>
