--- a/public/index.html
+++ b/public/index.html
@@ -92,6 +92,9 @@
               <li class="list-group-item" data-i18n="documents.degreeCertificate">สำเนาใบปริญญาบัตร</li>
               <li class="list-group-item" data-i18n="documents.conductCertificate">หนังสือรับรองความประพฤติ</li>
               <li class="list-group-item" data-i18n="documents.otherCertificates">หนังสือรับรองอื่น ๆ</li>
+               <li class="list-group-item" data-i18n="documents.Certificates9">หนังสือรับรองอื่น ๆ</li>
+               <li class="list-group-item" data-i18n="documents.Certificates10">หนังสือรับรองอื่น ๆ</li>
+               <li class="list-group-item" data-i18n="documents.Certificates11">หนังสือรับรองอื่น ๆ</li>
             </ul>
           </div>
         </div>
