--- a/public/register.html
+++ b/public/register.html
@@ -75,22 +75,22 @@
                   </select>
                 </div>
               </div>
-           <div class="row">
+          <div class="row">
                 <div class="col-md-6 mb-3">
                   <label for="birth_date" class="form-label required" data-i18n="register.birthDate">วันเดือนปีเกิด</label>
-                  <input type="date" class="form-control" id="birth_date" required 
+                  <input type="date" 
+                         class="form-control" 
+                         id="birth_date" 
+                         name="birth_date"
+                         required 
                          data-i18n-placeholder="register.birthDatePlaceholder" 
-                         lang="en">
-                  <div class="form-text">
-                    <small class="text-muted">รูปแบบ: วัน/เดือน/ปี</small>
-                  </div>
+                         lang="en-US">
+                  
                 </div>
                 <div class="col-md-6 mb-3">
                   <label for="id_number" class="form-label required" data-i18n="register.idNumber">หมายเลขบัตรประชาชน/Passport</label>
                   <input type="text" class="form-control" id="id_number" required data-i18n-placeholder="register.idNumberPlaceholder">
-            <!--      <div class="form-text">
-                    <small class="text-muted">กรอกหมายเลขบัตรประชาชน 13 หลักหรือหมายเลข Passport</small>
-                  </div> -->
+                 
                 </div>
               </div>
               <div class="row">
