--- a/public/register.html
+++ b/public/register.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
-<html lang="th">
+<html lang="en"> <!-- เปลี่ยนจาก th เป็น en -->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Language" content="en"> <!-- เพิ่มบรรทัดนี้ -->
   <title data-i18n="register.title">ลงทะเบียน - ระบบขอเอกสารออนไลน์</title>
+  
   <!-- เพิ่มฟอนต์ Prompt สำหรับภาษาไทยและอังกฤษ -->
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- เพิ่มฟอนต์ Noto Sans SC สำหรับภาษาจีน -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
   
-
+  <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  
+  <!-- Flatpickr CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive.css">
 </head>
@@ -75,22 +82,27 @@
                   </select>
                 </div>
               </div>
-          <div class="row">
+              <div class="row">
                 <div class="col-md-6 mb-3">
                   <label for="birth_date" class="form-label required" data-i18n="register.birthDate">วันเดือนปีเกิด</label>
-                  <input type="date" 
+                  <input type="text" 
                          class="form-control" 
                          id="birth_date" 
                          name="birth_date"
                          required 
-                         data-i18n-placeholder="register.birthDatePlaceholder" 
-                         lang="en-US">
-                  
+                         readonly
+                         data-i18n-placeholder="register.birthDatePlaceholder"
+                         placeholder="เลือกวันเกิด">
+                  <div class="form-text">
+                    <small class="text-muted">รูปแบบ: วัน/เดือน/ปี</small>
+                  </div>
                 </div>
                 <div class="col-md-6 mb-3">
                   <label for="id_number" class="form-label required" data-i18n="register.idNumber">หมายเลขบัตรประชาชน/Passport</label>
                   <input type="text" class="form-control" id="id_number" required data-i18n-placeholder="register.idNumberPlaceholder">
-                 
+                  <div class="form-text">
+                    <small class="text-muted">กรอกหมายเลขบัตรประชาชน 13 หลักหรือหมายเลข Passport</small>
+                  </div>
                 </div>
               </div>
               <div class="row">
@@ -124,7 +136,13 @@
     </div>
   </footer>
 
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  
+  <!-- Flatpickr JS -->
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  
+  <!-- Custom Scripts -->
   <script src="js/language.js"></script>
   <script src="js/main.js"></script>
   <script src="js/auth.js"></script>
