--- a/public/register.html
+++ b/public/register.html
@@ -93,16 +93,16 @@
                          readonly
                          data-i18n-placeholder="register.birthDatePlaceholder"
                          placeholder="เลือกวันเกิด">
-                  <div class="form-text">
+           <!--       <div class="form-text">
                     <small class="text-muted">รูปแบบ: วัน/เดือน/ปี</small>
-                  </div>
+                  </div> -->
                 </div>
                 <div class="col-md-6 mb-3">
                   <label for="id_number" class="form-label required" data-i18n="register.idNumber">หมายเลขบัตรประชาชน/Passport</label>
                   <input type="text" class="form-control" id="id_number" required data-i18n-placeholder="register.idNumberPlaceholder">
-                  <div class="form-text">
+           <!--       <div class="form-text">
                     <small class="text-muted">กรอกหมายเลขบัตรประชาชน 13 หลักหรือหมายเลข Passport</small>
-                  </div>
+                  </div> -->
                 </div>
               </div>
               <div class="row">
