--- a/public/admin/request-detail.html
+++ b/public/admin/request-detail.html
@@ -74,17 +74,21 @@
           <div class="card-header bg-primary text-white">
             <h5 class="mb-0" data-i18n="requestDetail.requestInfo">ข้อมูลคำขอ</h5>
           </div>
+        <!-- แทนที่ส่วนข้อมูลนักศึกษาในไฟล์ public/admin/request-detail.html -->
           <div class="card-body">
             <div class="row">
               <div class="col-lg-6">
                 <p><strong data-i18n="requestDetail.requestID">รหัสคำขอ:</strong> <span id="detail-id"></span></p>
                 <p><strong data-i18n="requestDetail.studentID">รหัสนักศึกษา:</strong> <span id="detail-student-id"></span></p>
                 <p><strong data-i18n="requestDetail.studentName">ชื่อนักศึกษา:</strong> <span id="detail-student-name"></span></p>
+                <p><strong data-i18n="requestDetail.email">อีเมล:</strong> <span id="detail-student-email"></span></p>
               </div>
               <div class="col-lg-6">
                 <p><strong data-i18n="requestDetail.faculty">คณะ:</strong> <span id="detail-student-faculty"></span></p>
-                <p><strong data-i18n="requestDetail.email">อีเมล:</strong> <span id="detail-student-email"></span></p>
                 <p><strong data-i18n="requestDetail.phone">เบอร์โทรศัพท์:</strong> <span id="detail-student-phone"></span></p>
+                <!-- เพิ่มฟิลด์ใหม่ -->
+                <p><strong data-i18n="admin.users.birthDate">วันเดือนปีเกิด:</strong> <span id="detail-student-birth-date">-</span></p>
+                <p><strong data-i18n="admin.users.idNumber">หมายเลขบัตร/Passport:</strong> <span id="detail-student-id-number">-</span></p>
               </div>
             </div>
             <div class="row">
