--- a/public/register.html
+++ b/public/register.html
@@ -119,9 +119,9 @@
                 <button type="submit" class="btn btn-primary" data-i18n="register.button">ลงทะเบียน</button>
               </div>
             </form>
-            <div class="mt-3 text-center">
+     <!--       <div class="mt-3 text-center">
               <p data-i18n="register.hasAccount">มีบัญชีอยู่แล้ว? <a href="login.html" data-i18n="register.login">เข้าสู่ระบบ</a></p>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
