--- a/public/login.html
+++ b/public/login.html
@@ -72,7 +72,7 @@
   <footer class="footer mt-5 py-3 bg-light">
     <div class="container text-center">
       <span class="text-muted" data-i18n="footer.copyright">
-        © 2025 ระบบขอเอกสารออนไลน์สำหรับนักศึกษามหาวิทยาลัยนอร์ทกรุงเทพ
+        © 2025 ระบบขอเอกสารการศึกษาออนไลน์ สำหรับนักศึกษามหาวิทยาลัยนอร์ทกรุงเทพ
       </span>
     </div>
   </footer>
