--- a/public/request.html
+++ b/public/request.html
@@ -386,9 +386,9 @@
             <div class="mb-3">
               <p data-i18n="request.bankTransfer">หรือโอนเงินผ่านบัญชีธนาคาร:</p>
               <p>
-                <strong data-i18n="request.bankName">ธนาคาร:</strong> <span id="bank-name" data-i18n="request.bankNameValue">ธนาคารกรุงไทย</span><br>
-                <strong data-i18n="request.accountNumber">เลขที่บัญชี:</strong> <span id="account-number">1234567890</span><br>
-                <strong data-i18n="request.accountName">ชื่อบัญชี:</strong> <span id="account-name" data-i18n="request.accountNameValue">มหาวิทยาลัยนอร์ทกรุงเทพ</span>
+                <strong data-i18n="request.bankName">ธนาคาร:</strong> <span id="bank-name" data-i18n="request.bankNameValue">ธนาคารกรุงเทพ</span><br>
+                <strong data-i18n="request.accountNumber">เลขที่บัญชี:</strong> <span id="account-number">134-5-567992</span><br>
+                <strong data-i18n="request.accountName">ชื่อบัญชี:</strong> <span id="account-name" data-i18n="request.accountNameValue">มหาวิทยาลัยนอร์ทกรุงเทพ 2</span>
               </p>
             </div>
           </div>
