--- a/public/login.html
+++ b/public/login.html
@@ -61,7 +61,7 @@
             </form>
             <div class="mt-3 text-center">
               <p> <a href="register.html">ลงทะเบียน</a></p>
-         <!--      <p data-i18n="login.noAccount">ยังไม่มีบัญชี? <a href="register.html" data-i18n="login.register">ลงทะเบียน</a></p>  -->
+           <p data-i18n="login.noAccount">ยังไม่มีบัญชี? <a href="register.html" data-i18n="login.register">ลงทะเบียน</a></p> 
             </div>
           </div>
         </div>
