--- a/public/login.html
+++ b/public/login.html
@@ -60,9 +60,16 @@
               </div>
             </form>
             <div class="mt-3 text-center">
-           <p data-i18n="login.noAccount">ยังไม่มีบัญชี? 
-    <a href="register.html" data-i18n="login.register">ลงทะเบียน</a>
+         <p data-i18n="login.noAccount">ยังไม่มีบัญชี? 
+    <a href="#" id="registerLink" data-i18n="login.register">ลงทะเบียน</a>
 </p>
+
+<script>
+document.getElementById('registerLink').addEventListener('click', function(e) {
+    e.preventDefault();
+    window.location.href = 'register.html';
+});
+</script>
             </div>
           </div>
         </div>
