--- a/public/login.html
+++ b/public/login.html
@@ -60,16 +60,30 @@
               </div>
             </form>
             <div class="mt-3 text-center">
-         <p data-i18n="login.noAccount">ยังไม่มีบัญชี? 
-    <a href="#" id="registerLink" data-i18n="login.register">ลงทะเบียน</a>
+      <p>ยังไม่มีบัญชี? <a href="register.html">ลงทะเบียน</a></p>
+
+              <p data-i18n="login.noAccount">ยังไม่มีบัญชี? 
+    <a href="register.html" 
+       style="color: blue; text-decoration: underline; cursor: pointer; pointer-events: auto;" 
+       data-i18n="login.register">ลงทะเบียน</a>
+</p>
+
+              <p data-i18n="login.noAccount">ยังไม่มีบัญชี? 
+    <span id="registerBtn" style="color: blue; text-decoration: underline; cursor: pointer;" 
+          data-i18n="login.register">ลงทะเบียน</span>
 </p>
 
 <script>
-document.getElementById('registerLink').addEventListener('click', function(e) {
-    e.preventDefault();
+document.getElementById('registerBtn').onclick = function() {
     window.location.href = 'register.html';
-});
+};
 </script>
+
+              
+            <p data-i18n="login.noAccount">ยังไม่มีบัญชี? 
+    <a href="https://www.google.com" target="_blank">ทดสอบลิงก์</a>
+</p>  
+              
             </div>
           </div>
         </div>
