--- a/public/login.html
+++ b/public/login.html
@@ -60,7 +60,10 @@
               </div>
             </form>
             <div class="mt-3 text-center">
-  <p data-i18n="login.noAccount">ยังไม่มีบัญชี? <a href="register.html" data-i18n="login.register">ลงทะเบียน</a></p>
+<p>
+  <span data-i18n="login.noAccountText">ยังไม่มีบัญชี?</span> 
+  <a href="register.html" data-i18n="login.register">ลงทะเบียน</a>
+</p>
               
             </div>
           </div>
