--- a/public/request.html
+++ b/public/request.html
@@ -293,7 +293,11 @@
                 <label class="form-label required" data-i18n="request.deliveryMethod">วิธีการรับเอกสาร</label>
                 <div class="form-check">
                   <input class="form-check-input" type="radio" name="delivery_method" id="pickup" value="pickup" checked>
-                  <label class="form-check-label" for="pickup" data-i18n="request.pickup">รับด้วยตนเอง</label>
+                  <label class="form-check-label" for="pickup" data-i18n="request.pickup">รับด้วยตนเอง (แผนกทะเบียนสะพานใหม่)</label>
+                </div>
+                  <div class="form-check">
+                  <input class="form-check-input" type="radio" name="delivery_method" id="pickuprangsit" value="pickup" checked>
+                  <label class="form-check-label" for="pickup" data-i18n="request.pickprangsit">รับด้วยตนเอง (แผนกทะเบียนรังสิต)</label>
                 </div>
                 <div class="form-check">
                   <input class="form-check-input" type="radio" name="delivery_method" id="mail" value="mail">
