--- a/public/request.html
+++ b/public/request.html
@@ -296,7 +296,7 @@
                   <label class="form-check-label" for="pickup" data-i18n="request.pickup">รับด้วยตนเอง (แผนกทะเบียนสะพานใหม่)</label>
                 </div>
                   <div class="form-check">
-                  <input class="form-check-input" type="radio" name="delivery_method" id="pickuprangsit" value="pickup" checked>
+                  <input class="form-check-input" type="radio" name="delivery_method" id="pickuprangsit" value="pickup">
                   <label class="form-check-label" for="pickup" data-i18n="request.pickprangsit">รับด้วยตนเอง (แผนกทะเบียนรังสิต)</label>
                 </div>
                 <div class="form-check">
