--- a/public/request.html
+++ b/public/request.html
@@ -297,7 +297,7 @@
                 </div>
                   <div class="form-check">
                   <input class="form-check-input" type="radio" name="delivery_method" id="pickuprangsit" value="pickup">
-                  <label class="form-check-label" for="pickup" data-i18n="request.pickprangsit">รับด้วยตนเอง (แผนกทะเบียนรังสิต)</label>
+                  <label class="form-check-label" for="pickup" data-i18n="request.pickuprangsit">รับด้วยตนเอง (แผนกทะเบียนรังสิต)</label>
                 </div>
                 <div class="form-check">
                   <input class="form-check-input" type="radio" name="delivery_method" id="mail" value="mail">
