--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -35,6 +35,9 @@
             <a class="nav-link" href="request.html" data-i18n="navbar.request">ขอเอกสาร</a>
           </li>
           <li class="nav-item">
+           <a class="nav-link" href="approval-request.html">ขอเอกสารที่ต้องอนุมัติ</a>
+           </li>
+          <li class="nav-item">
             <a class="nav-link" href="status.html" data-i18n="navbar.status">ตรวจสอบสถานะ</a>
           </li>
         </ul>
