--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -48,7 +48,10 @@
 
   <div class="container mt-5">
     <h2 class="mb-4" data-i18n="admin.dashboard.header">จัดการระบบ</h2>
-    
+    <!-- เพิ่มในเมนู Admin -->
+<li class="nav-item">
+  <a class="nav-link" href="admin/faculty-management.html">จัดการคณะและอาจารย์</a>
+</li>
     <div class="row mb-4">
       <div class="col-md-6 col-xl-3 mb-4">
         <div class="summary-card card-1">
