--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -26,7 +26,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto">
    <li class="nav-item">
-  <a class="nav-link" href="admin/faculty-management.html">จัดการคณะและอาจารย์</a>
+  <a class="nav-link" href="faculty-management.html">จัดการคณะและอาจารย์</a>
 </li>
           <li class="nav-item">
             <a class="nav-link active" href="dashboard.html" data-i18n="navbar.adminPanel">หน้าหลัก</a>
